feat: add jobPost module
